--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.682.0",
+		"@aws-sdk/lib-storage": "^3.682.0",
+		"@aws-sdk/s3-request-presigner": "^3.682.0",
 		"@internationalized/date": "^3.5.5",
 		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@node-rs/argon2": "^1.8.3",
