--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
 		"@sveltejs/kit": "^2.5.26",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
 		"@tailwindcss/typography": "^0.5.15",
+		"@types/archiver": "^6.0.3",
 		"@types/eslint": "^9.6.1",
 		"@types/file-saver": "^2.0.7",
 		"@types/lodash": "^4.17.7",
 		"@types/node": "^20.16.5",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
 		"@typescript-eslint/parser": "^8.4.0",
+		"archiver": "^7.0.1",
 		"autoprefixer": "^10.4.20",
 		"dayjs": "^1.11.13",
 		"eslint": "^9.9.1",
@@ -39,6 +41,7 @@
 		"husky": "^9.1.5",
 		"lodash": "^4.17.21",
 		"lucia": "^3.2.0",
+		"mime": "^4.0.6",
 		"node-xlsx": "^0.24.0",
 		"postcss": "^8.4.45",
 		"prettier": "^3.3.3",
